Fix for research overlapping on mobile

--- a/styles/newstyle.css
+++ b/styles/newstyle.css
@@ -115,5 +115,6 @@ li.cssmenu a:hover {
     border-spacing: 10px;
 }
 .projectcol {
-    display: table-cell;
+	display: inline-block;
+	max-width: 300px;
 }
